RoxeeMegaUp-0.7.0-dev:
    Build system cleanup.
    Working demo.
    QT5 support.

RoxeeMegaUp-0.6.0:
    Build system synch.
    Version bump to stay synched with Roxee.

RoxeeMegaUp-0.5.0:
    Build cleanup
    Linux "support"

RoxeeMegaUp-0.4.1:
    + Sparkle trunk

RoxeeMegaUp-0.4.0:
    First release.